[tool.poetry]
name = "pandas_utils"
version = "0.1.3"
description = ""
authors = ["rschmidtner <RSchmidtner@NewYorker.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.black]
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
