[tool.poetry]
name = "pandas_utils"
version = "0.1.3"
description = ""
authors = ["rschmidtner <RSchmidtner@NewYorker.de>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.idea
  | \.gitignore
  | \.venv
  | dist
  | README.rst
  | poetry.lock
  | pyproject.toml
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
